crates/plotnik-lib/tests/03-analyze/duplicates/duplicate_definition.txt
Expr = (expression)
Expr = (other)
==== diagnostics ====
error: `Expr` is already defined
 --> query.ptk:2:1
  |
2 | Expr = (other)
  | ^^^^
==== symbols ====
Expr
